--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -129,12 +129,12 @@
     <string name="compassos_excedentes">Defina uma quantidade de compassos menor que 999</string>
     <string name="senha_invalida">Senha inválida</string>
     <string name="ajuda">Ajuda</string>
-    <string name="title_activity_ajuda">AjudaActivity</string>
+    <string name="title_activity_ajuda" translatable="false">AjudaActivity</string>
     <string name="realizar_cadastro">Realizar Cadastro</string>
-    <string name="help_cadastro">Para realizar o cadastro de usuário, na tela Cadastro, insira nos campos E-mail, Senha e Confirme sua senha, um e-mail válido  e a confirmação respectivamente, após inserir os dados clique no botão cadastrar.</string>
-    <string name="login">Login</string>
-    <string name="help_login">Para realizar o login, na tela Login/Logout, digite nos campos E-mail e Senha, seu e-mail se senha cadastrados e clique no botão login.</string>
-    <string name="logout">Logout</string>
+    <string name="help_cadastro">Para realizar o cadastro de usuário, na tela Cadastro, insira nos campos E-mail, Senha e Confirme sua senha, um e-mail válido, a senha desejada e a confirmação da senha respectivamente, após inserir os dados clique no botão cadastrar.</string>
+    <string name="login" translatable="false">Login</string>
+    <string name="help_login">Para realizar o login, na tela Login/Logout, digite nos campos E-mail e Senha, seu e-mail e senha cadastrados e clique no botão login.</string>
+    <string name="logout" translatable="false">Logout</string>
     <string name="help_logout" >Na tela Login/Logout, Clique no botão Logout.</string>
     <string name="tocar_compasso">Tocar compasso continuamente</string>
     <string name="help_tocar_compasso">Para tocar um compasso continuamente, na tela TOCAR, defina a quantidade de tempos por compasso, a nota de referencia que irá valer um tempo para aquele compasso(entre Semibreve e Semifusa) e o valor dos batimentos por minuto para este compasso(entre 30 e 250) clique no botão com simbolo de confirmado e depois no botão com o simbolo de play.</string>
@@ -148,7 +148,7 @@
     <string name="help_remover_compasso">Para remover um compasso de uma música, na tela EDITAR, selecione a música na playlist, informe qual o numero do compasso que deseja remover no campo Compasso # e clique no botão REMOVER COMPASSO.</string>
     <string name="help_inserir_compasso">Para inserir um compasso em uma música, na tela EDITAR, selecione a música na Playlist e clique no botão INSERIR COMPASSO, o novo compasso será adicionado após o ultimo compasso existente.</string>
     <string name="help_deletar">Para deletar uma música, na tela EDITAR, clique e pressiona a música desejada na Playlist, clique em deletar e clique em SIM.</string>
-    <string name="help_enviar_musica">Para enviar uma musica criada para o repositório online, faça login com seu usuário, na tela ÁREA DO USUÁRIO, clique no botão SELECIONAR MÚSICA, selecione a música desejada e clique em ADICIONAR, clique no botão ENVIAR MÚSICA e na caixa de diálogo clique em enviar.</string>
+    <string name="help_enviar_musica">Para enviar uma musica criada para o repositório online, faça login com seu usuário, então na tela ÁREA DO USUÁRIO clique no botão SELECIONAR MÚSICA, selecione a música desejada e clique em ADICIONAR, clique no botão ENVIAR MÚSICA e na caixa de diálogo clique em enviar.</string>
     <string name="help_baixar_musica">Para baixar andamentos de uma música do repositório online, na tela ÁREA DO USUÁRIO, digite um termo para busca no campo Música, clique em pesquisar, selecione a música que deseja na lista, clique no botão baixar e em seguida em BAIXAR MÚSICA.</string>
 
 </resources>
