--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,14 +70,14 @@
     <string name="senha_necessaria">Senha Necessária</string>
     <string name="ordem_invalida">Ordem da música invalida</string>
     <string name="cadastro">Cadastro</string>
-    <string name="loginlogout">Entrar / Sair</string>
+    <string name="loginlogout">Login / Logout</string>
     <string name="title_activity_sign_up" translatable="false">SignUpActivity</string>
     <string name="title_activity_login_logout" translatable="false">LoginLogoutActivity</string>
     <string name="registro">Registro</string>
     <string name="confirme_senha">Confirme sua senha</string>
     <string name="cadastrar">Cadastrar</string>
-    <string name="entrar">Entrar</string>
-    <string name="sair">Sair</string>
+    <string name="entrar">Login</string>
+    <string name="sair">Logout</string>
     <string name="confirmacaoSenhaNecessaria">Confirmação da senha necessária</string>
     <string name="senha_nao_confere">Senhas não conferem</string>
     <string name="esqueci_senha">Esqueci minha senha</string>
